
- GPR#1511: show code at error location in expect-style tests,
  using new Location.show_code_at_location function
  (Gabriel Scherer and Armaël Guéneau,
   review by Valentin Gatien-Baron and Damien Doligez)

- GPR#1519, GPR#1532: migrate expect tests to ocamltest
  (Sébastien Hinderer, review by Gabriel Scherer, Valentin Gatien-Baron
  and Nicolás Ojeda Bär)

### Bug fixes

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

- MPR#6394, GPR#1425: fix fatal_error from Parmatch.get_type_path
  (Virgile Prevosto, review by David Allsopp, Thomas Refis and Jacques Garrigue)

* MPR#6604, GPR#931: Only allow directives with filename and at the beginning of
  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- PR#7660, GPR#1445: Use native Windows API to implement Unix.utimes in order to
  avoid unintended shifts of the argument timestamp depending on DST setting.
  (Nicolas Ojeda Bar, review by David Allsopp, Xavier Leroy)

- MPR#7668: -principal is broken with polymorphic variants
  (Jacques Garrigue, report by Jun Furuse)

- MPR#7680, GPR#1497: Incorrect interaction between Matching.for_let and
  Simplif.simplify_exits
  (Alain Frisch, report and review by Vincent Laviron)

- MPR#7682, GPR#1495: fix [@@unboxed] for records with 1 polymorphic field
  (Alain Frisch, report by Stéphane Graham-Lengrand, review by Gabriel Scherer)

- GPR#1517: More robust handling of type variables in mcomp
  (Leo White and Thomas Refis, review by Jacques Garrigue)

- PR#4499, GPR#1479: Use native Windows API to implement Sys.getenv,
  Unix.getenv and Unix.environment under Windows.
  (Nicolas Ojeda Bar, report by Alain Frisch, review by David Allsopp, Xavier
  Leroy)

4.06 maintenance branch
-----------------------

### Bug fixes
