@@ -1,0 +1,149 @@
+Misc.no_overflow_add 0 0 = true
+Misc.no_overflow_add 0 1 = true
+Misc.no_overflow_add 0 2 = true
+Misc.no_overflow_add 0 max_int = true
+Misc.no_overflow_add 0 -1 = true
+Misc.no_overflow_add 0 -2 = true
+Misc.no_overflow_add 0 min_int = true
+Misc.no_overflow_add 1 0 = true
+Misc.no_overflow_add 1 1 = true
+Misc.no_overflow_add 1 2 = true
+Misc.no_overflow_add 1 max_int = false
+Misc.no_overflow_add 1 -1 = true
+Misc.no_overflow_add 1 -2 = true
+Misc.no_overflow_add 1 min_int = true
+Misc.no_overflow_add 2 0 = true
+Misc.no_overflow_add 2 1 = true
+Misc.no_overflow_add 2 2 = true
+Misc.no_overflow_add 2 max_int = false
+Misc.no_overflow_add 2 -1 = true
+Misc.no_overflow_add 2 -2 = true
+Misc.no_overflow_add 2 min_int = true
+Misc.no_overflow_add max_int 0 = true
+Misc.no_overflow_add max_int 1 = false
+Misc.no_overflow_add max_int 2 = false
+Misc.no_overflow_add max_int max_int = false
+Misc.no_overflow_add max_int -1 = true
+Misc.no_overflow_add max_int -2 = true
+Misc.no_overflow_add max_int min_int = true
+Misc.no_overflow_add -1 0 = true
+Misc.no_overflow_add -1 1 = true
+Misc.no_overflow_add -1 2 = true
+Misc.no_overflow_add -1 max_int = true
+Misc.no_overflow_add -1 -1 = true
+Misc.no_overflow_add -1 -2 = true
+Misc.no_overflow_add -1 min_int = false
+Misc.no_overflow_add -2 0 = true
+Misc.no_overflow_add -2 1 = true
+Misc.no_overflow_add -2 2 = true
+Misc.no_overflow_add -2 max_int = true
+Misc.no_overflow_add -2 -1 = true
+Misc.no_overflow_add -2 -2 = true
+Misc.no_overflow_add -2 min_int = false
+Misc.no_overflow_add min_int 0 = true
+Misc.no_overflow_add min_int 1 = true
+Misc.no_overflow_add min_int 2 = true
+Misc.no_overflow_add min_int max_int = true
+Misc.no_overflow_add min_int -1 = false
+Misc.no_overflow_add min_int -2 = false
+Misc.no_overflow_add min_int min_int = false
+Misc.no_overflow_sub 0 0 = true
+Misc.no_overflow_sub 0 1 = true
+Misc.no_overflow_sub 0 2 = true
+Misc.no_overflow_sub 0 max_int = true
+Misc.no_overflow_sub 0 -1 = true
+Misc.no_overflow_sub 0 -2 = true
+Misc.no_overflow_sub 0 min_int = false
+Misc.no_overflow_sub 1 0 = true
+Misc.no_overflow_sub 1 1 = true
+Misc.no_overflow_sub 1 2 = true
+Misc.no_overflow_sub 1 max_int = true
+Misc.no_overflow_sub 1 -1 = true
+Misc.no_overflow_sub 1 -2 = true
+Misc.no_overflow_sub 1 min_int = false
+Misc.no_overflow_sub 2 0 = true
+Misc.no_overflow_sub 2 1 = true
+Misc.no_overflow_sub 2 2 = true
+Misc.no_overflow_sub 2 max_int = true
+Misc.no_overflow_sub 2 -1 = true
+Misc.no_overflow_sub 2 -2 = true
+Misc.no_overflow_sub 2 min_int = false
+Misc.no_overflow_sub max_int 0 = true
+Misc.no_overflow_sub max_int 1 = true
+Misc.no_overflow_sub max_int 2 = true
+Misc.no_overflow_sub max_int max_int = true
+Misc.no_overflow_sub max_int -1 = false
+Misc.no_overflow_sub max_int -2 = false
+Misc.no_overflow_sub max_int min_int = false
+Misc.no_overflow_sub -1 0 = true
+Misc.no_overflow_sub -1 1 = true
+Misc.no_overflow_sub -1 2 = true
+Misc.no_overflow_sub -1 max_int = true
+Misc.no_overflow_sub -1 -1 = true
+Misc.no_overflow_sub -1 -2 = true
+Misc.no_overflow_sub -1 min_int = true
+Misc.no_overflow_sub -2 0 = true
+Misc.no_overflow_sub -2 1 = true
+Misc.no_overflow_sub -2 2 = true
+Misc.no_overflow_sub -2 max_int = false
+Misc.no_overflow_sub -2 -1 = true
+Misc.no_overflow_sub -2 -2 = true
+Misc.no_overflow_sub -2 min_int = true
+Misc.no_overflow_sub min_int 0 = true
+Misc.no_overflow_sub min_int 1 = false
+Misc.no_overflow_sub min_int 2 = false
+Misc.no_overflow_sub min_int max_int = false
+Misc.no_overflow_sub min_int -1 = true
+Misc.no_overflow_sub min_int -2 = true
+Misc.no_overflow_sub min_int min_int = true
+Misc.no_overflow_mul 0 0 = true
+Misc.no_overflow_mul 0 1 = true
+Misc.no_overflow_mul 0 2 = true
+Misc.no_overflow_mul 0 max_int = true
+Misc.no_overflow_mul 0 -1 = true
+Misc.no_overflow_mul 0 -2 = true
+Misc.no_overflow_mul 0 min_int = true
+Misc.no_overflow_mul 1 0 = true
+Misc.no_overflow_mul 1 1 = true
+Misc.no_overflow_mul 1 2 = true
+Misc.no_overflow_mul 1 max_int = true
+Misc.no_overflow_mul 1 -1 = true
+Misc.no_overflow_mul 1 -2 = true
+Misc.no_overflow_mul 1 min_int = true
+Misc.no_overflow_mul 2 0 = true
+Misc.no_overflow_mul 2 1 = true
+Misc.no_overflow_mul 2 2 = true
+Misc.no_overflow_mul 2 max_int = false
+Misc.no_overflow_mul 2 -1 = true
+Misc.no_overflow_mul 2 -2 = true
+Misc.no_overflow_mul 2 min_int = false
+Misc.no_overflow_mul max_int 0 = true
+Misc.no_overflow_mul max_int 1 = true
+Misc.no_overflow_mul max_int 2 = false
+Misc.no_overflow_mul max_int max_int = false
+Misc.no_overflow_mul max_int -1 = true
+Misc.no_overflow_mul max_int -2 = false
+Misc.no_overflow_mul max_int min_int = false
+Misc.no_overflow_mul -1 0 = true
+Misc.no_overflow_mul -1 1 = true
+Misc.no_overflow_mul -1 2 = true
+Misc.no_overflow_mul -1 max_int = true
+Misc.no_overflow_mul -1 -1 = true
+Misc.no_overflow_mul -1 -2 = true
+Misc.no_overflow_mul -1 min_int = false
+Misc.no_overflow_mul -2 0 = true
+Misc.no_overflow_mul -2 1 = true
+Misc.no_overflow_mul -2 2 = true
+Misc.no_overflow_mul -2 max_int = false
+Misc.no_overflow_mul -2 -1 = true
+Misc.no_overflow_mul -2 -2 = true
+Misc.no_overflow_mul -2 min_int = false
+Misc.no_overflow_mul min_int 0 = true
+Misc.no_overflow_mul min_int 1 = true
+Misc.no_overflow_mul min_int 2 = false
+Misc.no_overflow_mul min_int max_int = false
+Misc.no_overflow_mul min_int -1 = false
+Misc.no_overflow_mul min_int -2 = false
+Misc.no_overflow_mul min_int min_int = false
+
+All tests succeeded.
